--- a/drawing-ui/.env.development
+++ b/drawing-ui/.env.development
@@ -1,2 +1,3 @@
-VITE_BASE_API_URL='http://localhost:3000'
+# VITE_BASE_API_URL='http://localhost:3000'
 VITE_GA4_ID='G-7SE63PSMJR'
+VITE_BASE_API_URL='https://8080-fabiooshiro-drawingdapp-q7nm3xi5vp8.ws-us116.gitpod.io'
