--- a/drawing-ui/.env.production
+++ b/drawing-ui/.env.production
@@ -1,2 +1,3 @@
-VITE_BASE_API_URL='https://api.drawingcanvas.io'
+# VITE_BASE_API_URL='https://api.drawingcanvas.io'
 VITE_GA4_ID='G-7SE63PSMJR'
+VITE_BASE_API_URL='https://8080-fabiooshiro-drawingdapp-q7nm3xi5vp8.ws-us116.gitpod.io'
